--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -11,6 +11,11 @@
         android:title="Chart"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_admin"
+        android:orderInCategory="100"
+        android:title="Admin"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_search"
         android:orderInCategory="100"
         android:title="Settings"
